# httpbin

./: Dockerfile  README.md  build-multiarch-simple.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  setup-buildx.sh
httpbin/: core.py  helpers.py
